fixed textarea alignment

--- a/lab_6/form_styles.css
+++ b/lab_6/form_styles.css
@@ -9,18 +9,23 @@ h1{
     color: 	#484848;
     font-family: 'Heebo', sans-serif;
     margin: 45px;
+   
 }
 
 form {
 
   /* Center the form on the page */
-  margin: 0 auto;
+  margin: auto;
   width: 400px;
 
-  
-
-
 }
+
+.container{
+
+  align-items: center;
+}
+
+
 
 label {
 
@@ -59,9 +64,7 @@ input, textarea {
 ul {
 
     list-style: none;
-    /*padding: 0;
-    margin: 0;*/
-    align-content: center;
+    /*align-content: center;*/
 
 }
 
@@ -73,4 +76,5 @@ ul {
   width: 100px;
   height: 40px;
   margin-top: 10px;
+  box-shadow: none;
 }
